chore: change workingDirectory location

--- a/.github/workflows/worker-email-deploy.yml
+++ b/.github/workflows/worker-email-deploy.yml
@@ -32,7 +32,7 @@ jobs:
         uses: cloudflare/wrangler-action@v3
         with:
           wranglerVersion: "3.114.1"
-          workingDirectory: "../src/email"
+          workingDirectory: "src/email"
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           secrets: |
